fix: fix box3 position on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -10,7 +10,7 @@ body {
     overflow-x: hidden;
 
     @media (max-width: 768px) {
-        overflow-y: auto;
+        overflow-y: initial;
     }
 }
 
@@ -22,7 +22,7 @@ body {
     background-color: #1f1f21;
 
     @media (max-width: 768px) {
-        min-height: 880px;
+        min-height: 900px;
         height: 100%;
     }
 }
@@ -56,7 +56,9 @@ body {
         transform: translate(-50%, -50%);
 
         @media (max-width: 768px) {
+            position: absolute;
             width: 246.52%;
+            top: calc(50% - 100px);
         }
     }
 
@@ -109,7 +111,7 @@ body {
             position: absolute;
             width: 818px;
             left: calc(-25% + 100.5px + 140px);
-            bottom: 50px;
+            bottom: -60px;
             transform: translate(-50%, 0);
         }
     }
